# EG-IGS

./: .gitignore  README.md  app.py  config.py  decomposition.py  premine.py  pyproject.toml  test_chat_gpt.py  test_fetch.py  test_qwen.py  tmp1.txt  tmp2.txt  utils.py
IGS/: IGS_brute_force.py  __init__.py  brute_force.py  eg_igs.py  state_of_the_art.py  ts_igs.py
app/: config.py  main.py
app/data/: amazon_path_tree  htree-original.txt  ptree-original.txt  ptree.txt
app/igs/: __init__.py  brute_force.py  eg_igs.py  eg_igs_optimzed.py  state_of_the_art.py  ts_igs.py  ts_igs_optimized.py
app/oracles/: __init__.py  chat_gpt.py  qwen.py
app/public/: index.html  scripts.js
app/utils/: amazon.py  data.py  message.py  tree.py
data/: amazon_hierarchy  amazon_pre_mined  htree.txt
oracles/: __init__.py  chat_gpt.py  qwen.py
public/: index.html  scripts.js
utils/: data.py  message.py  tree.py
