[project]
name = "eg-igs"
version = "0.1.0"
description = "Reproduction demo for Example-Guided Interactive Graph Search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.10",
    "beautifulsoup4>=4.12.3",
    "dashscope>=1.20.11",
    "fastapi[standard]>=0.115.2",
    "nltk>=3.9.1",
    "openai>=1.52.0",
    "spacy>=3.8.2",
    "treelib>=1.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.2",
]
